--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+kortana80 is awesome!
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
